# insights_agent

./: .containerignore  .env.example  .gitignore  .gitleaks.toml  Containerfile  Containerfile.marketplace-handler  Makefile  README.md  agent.py  cloudbuild.yaml  insights-agent-configmap.yaml  insights-agent-pod.yaml  insights-agent-secret.yaml  pyproject.toml
agents/rh-insights-agent/: agent.py
agents/rh_lightspeed_agent/: __init__.py  agent.py
config/: .gitkeep
deploy/cloudrun/: README.md  cleanup.sh  deploy.sh  marketplace-handler.yaml  service.yaml  setup.sh
deploy/podman/: insights-agent-configmap.yaml  insights-agent-pod.yaml  insights-agent-secret.yaml  lightspeed-agent-configmap.yaml  lightspeed-agent-pod.yaml  lightspeed-agent-secret.yaml  marketplace-handler-pod.yaml
docs/: api.md  architecture-dcr.md  architecture.md  authentication.md  configuration.md  index.md  marketplace.md  mcp-integration.md  metering.md  rate-limiting.md  telemetry.md  troubleshooting.md
scripts/: seed_dcr_clients.py  test_a2a_auth.py  test_dcr.py  test_deployed_dcr.py
src/insights_agent/: __init__.py  main.py
src/insights_agent/api/: __init__.py  app.py
src/insights_agent/auth/: __init__.py  dependencies.py  introspection.py  jwt.py  middleware.py  models.py  oauth.py  router.py
src/insights_agent/config/: __init__.py  settings.py
src/insights_agent/core/: __init__.py  agent.py
src/insights_agent/db/: __init__.py  base.py  models.py
src/insights_agent/dcr/: __init__.py  google_jwt.py  keycloak_client.py  models.py  repository.py  router.py  service.py
src/insights_agent/marketplace/: __init__.py  __main__.py  app.py  models.py  pubsub_handler.py  repository.py  router.py  service.py
src/insights_agent/marketplace_handler/: __init__.py  __main__.py  app.py
src/insights_agent/metering/: __init__.py  metrics.py  middleware.py  repository.py  router.py  service.py
src/insights_agent/ratelimit/: __init__.py  limiter.py  middleware.py  models.py  service.py
src/insights_agent/service_control/: __init__.py  client.py  models.py  reporter.py  router.py  scheduler.py
src/insights_agent/telemetry/: __init__.py  setup.py
src/insights_agent/tools/: __init__.py  mcp_config.py  (+3 more)
src/lightspeed_agent/: __init__.py  main.py
tests/: conftest.py  test_a2a.py  test_auth.py  test_dcr.py  test_marketplace.py  test_metering.py  test_ratelimit.py  test_service_control.py  test_tools.py
(+53 files in other folders)
